docs: document --add-opens requirement for IDE dev runs